# SuperPlayer

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/org/huihui/superplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/common/: CMakeLists.txt
app/src/main/cpp/common/utils/: Platform.cpp
app/src/main/cpp/jni/: CMakeLists.txt  SuperPlayerJNI.cpp
app/src/main/cpp/player/: CMakeLists.txt  FrameQueue.cpp  FrameQueue.h  PktQueue.cpp  PktQueue.h  SuperPlayer.cpp  SuperPlayer.h
app/src/main/cpp/player/demuxer/: IDemuxer.cpp  IDemuxer.h  ffmpegDemuxer.cpp  ffmpegDemuxer.h
app/src/main/cpp/third_part/: CMakeLists.txt  third.cmake
app/src/main/cpp/third_part/ffmpeg/arm64-v8a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/cpp/third_part/ffmpeg/armeabi-v7a/include/libavutil/: ffversion.h
app/src/main/cpp/third_part/ffmpeg/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/cpp/third_part/ffmpeg/x86-64/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/java/org/huihui/superplayer/: MainActivity.kt  SuperPlayer.kt
app/src/main/res/values/: themes.xml
app/src/test/java/org/huihui/superplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
hwffmpeg/: build.gradle
hwffmpeg/src/androidTest/java/org/huihui/hwffmpeg/: ExampleInstrumentedTest.kt
hwffmpeg/src/main/: AndroidManifest.xml
hwffmpeg/src/main/cpp/: CMakeLists.txt
hwffmpeg/src/main/cpp/jni/: CMakeLists.txt  HWFFmpegClass.cpp  HWFFmpegClass.h  Log.cpp  Log.h  hwffmpegJNI.cpp
hwffmpeg/src/main/cpp/player/: CMakeLists.txt  HWFFmpegPlayer.cpp  HWFFmpegPlayer.h  platform.cpp  platform.h
hwffmpeg/src/main/cpp/third_part/: CMakeLists.txt  third.cmake
hwffmpeg/src/main/cpp/third_part/ffmpeg/arm64-v8a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
hwffmpeg/src/main/cpp/third_part/ffmpeg/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
hwffmpeg/src/main/cpp/third_part/openssl/arm64-v8a/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
hwffmpeg/src/main/cpp/third_part/openssl/armeabi-v7a/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
hwffmpeg/src/main/java/org/huihui/hwffmpeg/: HWFFmpeg.kt  MainActivity.kt
hwffmpeg/src/main/res/values/: strings.xml
hwffmpeg/src/test/java/org/huihui/hwffmpeg/: ExampleUnitTest.kt
